--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bolinha e Fantasma</title>
+    <title>Bolinha e Fantasmas</title>
     <style>
         body {
             margin: 0;
@@ -17,24 +17,18 @@
             height: 100vh;
         }
         
-        #bolinha {
+        .bolinha {
             position: absolute;
             width: 50px;
             height: 50px;
-            left: 30%;
-            top: 50%;
-            transform: translate(-50%, -50%);
             user-select: none;
             z-index: 2;
         }
         
-        #fantasma {
+        .fantasma {
             position: absolute;
             width: 60px;
             height: 60px;
-            left: 70%;
-            top: 50%;
-            transform: translate(-50%, -50%);
             user-select: none;
             transition: transform 0.2s;
             z-index: 1;
@@ -43,10 +37,12 @@
 </head>
 <body>
     <div id="gameArea">
-        <img id="bolinha" src="bolinha.png" alt="Bolinha">
-        <img id="fantasma" src="fantasma.png" alt="Fantasma">
+        <!-- Elementos serão adicionados via JavaScript -->
     </div>
 
-    <script src="script.js"></script>
+    <!-- Arquivos JavaScript separados -->
+    <script src="bolinha.js"></script>
+    <script src="fantasma.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
